# WarheadStringUtils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/compiler/: clang.cmake  gcc.cmake  msvc.cmake
cmake/macros/: CheckPlatform.cmake  ConfigureBaseTargets.cmake
include/Warhead/: Algorithm.h  Convert.h  Tokenizer.h
src/: Algorithm.cpp  CMakeLists.txt  Tokenizer.cpp
tests/: CMakeLists.txt  WarheadStringUtils.cpp  main.cpp
